k8s-deploy/frontend-base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: blog-app
spec:
  selector:
    app: frontend
  ports:
  - protocol: TCP
    port: 3000
