k8s-deploy/frontend-base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: blog-app
spec:
  defaultBackend:
    service:
      name: frontend-service
      port:
        number: 3000
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 3000
